--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -1,6 +1,5 @@
 * {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    border: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    border: 0;
     margin: 0;
 }
 
@@ -34,7 +33,7 @@ nav a {
 }
 
 nav a:hover {
-    color: rgb(11, 118, 212);
+    color: #544EEE;
 }
 
 h1 {
@@ -47,7 +46,6 @@ h1 {
 
 h4 {
     color: #15141B;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1.5rem;
     font-weight: 700;
 }
@@ -60,6 +58,15 @@ a {
     font-size: 1rem;
 }
 
+footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 8vh;
+    font-size: 2rem;
+}
+
 .NavItems {
     display: flex;
     justify-content: center;
@@ -70,7 +77,26 @@ a {
 }
 
 .active {
-    color: rgb(11, 118, 212);
+    color: #544EEE;
+}
+
+.HeaderContainer {
+    display: flex;
+    justify-content: space-between;
+    /* align-items: last baseline; */
+    /* gap: 2.34vw; */
+    margin: 0 20px 0 20px;
+}
+
+.HeaderContainer h1 {
+    /* display: flex; */
+    /* align-items: flex-start; */
+    margin: 30px 20px 20px 0px;
+    font-size: 40px;
+}
+
+.HeaderContainer img {
+    margin-top: 3.15vh;
 }
 
 .CardContainer {
@@ -79,25 +105,14 @@ a {
     gap: 12px;
 }
 
-.CardContainer h1 {
-    display: flex;
-    align-items: flex-start;
-    margin: 30px 20px 20px 20px;
-    font-size: 40px;
-}
 
 .CardContainer p {
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: 700;
     color: #FFFFFF;
     background-color: #544EEE;
     padding: 7px 16px 7px 16px;
-    border-radius: 10px;
-}
-
-.CountryTags p:last-child {
-    color: #646668;
-    background-color: #F6F6F6;
+    border-radius: 0.625rem;
 }
 
 .CountryCard {
@@ -106,9 +121,10 @@ a {
     align-items: flex-start;
     flex-direction: column;
     height: auto; /* Around 70px moved to viewport height*/
+    /* width: 23vw; */
     background-color: #FFFFFF;
     border-radius: 30px;
-    gap: 8px;
+    gap: 1vh;
     padding: 20px;
     margin: 0 20px 0 20px;
 }
@@ -117,5 +133,10 @@ a {
     display: flex;
     justify-content: center;
     flex-direction: row;
-    gap: 8px;
+    gap: 1vh;
+}
+
+.CountryTags p:last-child {
+    color: #646668;
+    background-color: #F6F6F6;
 }
