--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -44,7 +44,7 @@ nav a {
 }
 
 nav a:hover {
-    color: #221ead;
+    color: #34319b;
 }
 
 .BurgerIcon {
@@ -65,7 +65,7 @@ nav a:hover {
 }
 
 .UserAreaLinks a:first-child:hover {
-    color: #221ead;
+    color: #34319b;
 }
 
 .UserAreaLinks a:last-child {
@@ -77,7 +77,7 @@ nav a:hover {
 }
 
 .UserAreaLinks a:last-child:hover {
-    background-color: #221ead;
+    background-color: #34319b;
 }
 
 .LogoContainer {
@@ -92,6 +92,7 @@ h1 {
 }
 
 h2 {
+    color: #15141B;
     font-size: 1.625rem;
     font-weight: 700;
 }
@@ -115,28 +116,25 @@ footer {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 8vh;
-    font-size: 2rem;
+    height: 10vh;
+    width: 100vw;
+    margin-top: 25px;
+    gap: 15px;
+    background-color: #E5E4FC;
 }
 
-/* .NavItems {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 2vw; /* This is 20px moved to viewport width */
-    /* margin-left: 0.60vw; This is 10px moved to viewport width */
-    /* margin-right: 0.60vw; This is 10px moved to viewport width */
-/* } */
+footer p:last-child {
+    font-size: 0.5rem;
+}
 
 .active {
-    color: #544EEE;
+    color: #34319b;
 }
 
 .TopInfoContainer {
     display: flex;
     flex-direction: column;
     width: 100vw;
-    /* gap: 12px; */
 }
 
 .TopInfoContainer img {
@@ -146,14 +144,11 @@ footer {
 .HeaderContainer {
     display: flex;
     justify-content: space-between;
-    /* align-items: last baseline; */
-    /* gap: 2.34vw; */
     margin: 70px 20px 0 20px;
 }
 
 .HeaderContainer h1 {
-    /* display: flex; */
-    /* align-items: flex-start; */
+    color: #15141B;
     margin: 3.60vh 0px 20px 0px;
     font-size: 40px;
 }
@@ -170,35 +165,73 @@ input {
     background-color: #E5E4FC;
     border: 2px solid #544EEE;
     padding: 7px 16px 7px 16px;
-    margin: 10px 20px 10px 20px;
+    margin: 10px 20px 20px 20px;
     font-size: 1rem;
-    /* text-align: center; */
-    /* width: 300px; */
 }
 
 input::placeholder {
     color: #9895e5;
 }
 
+input:hover {
+    background-color: #c5c5dc;
+    color: #8381c6;
+}
+
 .FilterBox {
     display: flex;
+    flex-direction: column;
+    justify-content: space-around;
     border-radius: 30px;
     box-shadow: 0 4px 8px 0 #E5E4FC, 0 6px 20px 0 #E5E4FC;
     background-color: white;
-    height: 15vh;
-    padding: 10px 16px 10px 16px;
-    margin: 0px 20px 0px 20px;
+    height: auto;
+    padding: 20px;
+    margin: 0px 20px 10px 20px;
 }
 
-.FilterBox div {
-    display: flex;
-    flex-direction: column;
+.FilterBox h4 {
+    margin: 0 20px 10px 20px;
 }
-.FilterBox div p {
-    font-size: 0.8rem;
-    color: #544EEE;
-    background-color: white;
-    padding: 5px;
+
+.FilterOptions {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.FilterOptions div {
+    display: flex;
+    gap: 5px;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.FilterOptions div:last-child {
+    display: flex;
+    gap: 5px;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.Selected {
+    font-size: 1rem;
+    font-weight: 700;
+    color: #FFFFFF;
+    background-color: #544EEE;
+    border-radius: 10px;
+    padding: 7px 16px 7px 16px;
+    text-align: center;
+}
+
+.Unselected {
+    font-size: 1rem;
+    font-weight: 700;
+    color: #646668;
+    background-color: #F6F6F6;
+    border-radius: 10px;
+    padding: 7px 16px 7px 16px;
+    text-align: center;
 }
 
 .CardContainer {
@@ -222,7 +255,7 @@ input::placeholder {
     justify-content: center;
     align-items: flex-start;
     flex-direction: column;
-    height: auto; /* Around 70px moved to viewport height*/
+    height: auto;
     width: auto;
     background-color: #FFFFFF;
     border-radius: 30px;
@@ -251,12 +284,12 @@ input::placeholder {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #FFFFFF; /* Semi-transparent white background */
+    background-color: #FFFFFF;
     display: flex;
-    flex-direction: column; /* Columns for content */
-    align-items: center; /* Center content horizontally */
-    justify-content: center; /* Space between columns and rows */
-    z-index: 999; /* Ensure modal appears above other content */
+    flex-direction: column;
+    align-items: center; 
+    justify-content: center; 
+    z-index: 999;
     font-weight: 700;
 }
 
@@ -267,36 +300,32 @@ input::placeholder {
 }
 
 .modal-content {
-    /* flex: 1; */
-     /* Take up remaining vertical space */
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    /* gap: 200px; */
 }
 
 .NavItems {
     display: flex;
-    flex-direction: column; /* Columns for links */
-    align-items: center; /* Center links horizontally */
-    margin: 20px 20px 300px 20px; /* Add spacing around links */
+    flex-direction: column;
+    align-items: center;
+    margin: 20px 20px 300px 20px;
     gap: 20px;
 }
 
 .UserAreaLinks {
     display: flex;
-    flex-direction: row; /* Row for UserAreaLinks */
+    flex-direction: row;
     align-items: center;
-    margin-top: 10px; /* Add spacing above UserAreaLinks */
-    gap: 20px;
+    margin-top: 10px
 }
 
 .NavItems a, .UserAreaLinks a {
     text-decoration: none;
     color: #544EEE;
     font-size: 1.3rem;
-    margin: 5px 0; /* Add vertical spacing between links */
+    margin: 5px 0;
 }
 
 .CloseButton {
@@ -305,4 +334,39 @@ input::placeholder {
     top: 20px;
     left: 20px;
     cursor: pointer;
+}
+
+/*? About Page Styles */
+
+.AboutPage {
+    display: flex;
+    flex-direction: column;
+    margin: 100px 20px 20px 20px;
+}
+
+.AboutPage h1 {
+    text-align: left;
+    margin-bottom: 10px;
+    color: #544EEE;
+}
+
+.AboutPage h2 {
+    margin: 20px 20px 10px 0px;
+    font-size: 1.5rem;
+    color: #544EEE;
+}
+
+.AboutPage h3 {
+    font-size: 1rem;
+    margin: 30px 0 0 0;
+    color: #544EEE;
+}
+
+.AboutPage p {
+    margin: 5px 0 5px 0;
+    color: #646668;
+}
+
+.AboutPage span {
+    color: #9895e5;
 }
