--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -119,7 +119,7 @@ footer {
     align-items: center;
     height: 10vh;
     width: 100vw;
-    margin-top: 30px;
+    /* margin-top: 30px; */
     gap: 15px;
     background-color: #E5E4FC;
     flex-shrink: 0;
@@ -227,9 +227,9 @@ input::placeholder {
     text-align: center;
 }
 
-.Selected:hover {
+/* .Selected:hover {
     background-color: #34319b;
-}
+} */
 
 .Unselected {
     font-size: 1rem;
@@ -241,9 +241,9 @@ input::placeholder {
     text-align: center;
 }
 
-.Unselected:hover {
+/* .Unselected:hover {
     background-color: #c0bfbf;
-}
+} */
 
 .CardContainer {
     display: flex;
@@ -252,6 +252,7 @@ input::placeholder {
     width: 100vw;
     gap: 12px;
     min-height: 60vh;
+    margin-bottom: 25px;
 }
 
 .CardContainer a {
