--- a/src/style/countrydetails-styles.css
+++ b/src/style/countrydetails-styles.css
@@ -26,11 +26,16 @@
 .DetailsHeader {
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    gap: 6px;
     justify-content: center;
     align-items: flex-start;
     text-align: left;
     margin: 3.60vh 20px 20px 20px;
+}
+
+.DetailsHeader h1 {
+    display: flex;
+    gap: 10px;
 }
 
 .HeaderImage {
