--- a/src/style/home-styles.css
+++ b/src/style/home-styles.css
@@ -59,7 +59,7 @@ h2 {
     /* width: 42vh; */
     border-radius: 30px 30px 0 0;
     /* vertical-align: middle; */
-    /* margin: 0 20px 0 20px; */
+    margin: 0 -15px 0 -15px;
     /* align-self: stretch; */
 }
 
