--- a/src/style/home-styles.css
+++ b/src/style/home-styles.css
@@ -13,7 +13,7 @@
 }
 
 h2 {
-    margin: 20px 20px 0 20px;
+    margin: 20px 5vw 0 5vw;
 }
 
 .HeroImage h1 {
@@ -22,7 +22,7 @@ h2 {
 
 .CountryDisplayTitle {
     display: flex;
-    margin: 0 20px 0 0;
+    margin: 0 5vw 0 0;
     justify-content: space-between;
     align-items: center;
 }
@@ -48,7 +48,7 @@ h2 {
     justify-content: center;
     /* align-items: center; */
     max-width: 89vw;
-    margin: 20px 20px 0 20px;
+    margin: 20px 5vw 0 5vw;
     border-radius: 30px;
     /* padding: 0px 16px 40px 16px; */
     background-color: white;
