--- a/src/style/countrydetails-styles.css
+++ b/src/style/countrydetails-styles.css
@@ -54,13 +54,13 @@
     border-radius: 10px;
     border: 1px solid rgba(255, 255, 255, 0.40);
     background: rgba(137, 137, 137, 0.4);
-    position: absolute;
+    position: fixed;
     cursor: pointer;
     z-index: 998;
 }
 
 .GoBackArrow:hover {
-        background: rgba(91, 91, 91, 0.4);
+    background: rgba(91, 91, 91, 0.4);
 }
 
 .DetailsHeader p {
