--- a/src/style/countrydetails-styles.css
+++ b/src/style/countrydetails-styles.css
@@ -130,3 +130,20 @@
     margin: 0 5vw 20px 5vw;
     border-radius: 30px;
 }
+
+.FavoritesIcon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 95px;
+    right: 5vw;
+    /* z-index: 2; */
+    width: 40px;
+    height: 40px;
+    /* flex-shrink: 0; */
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.40);
+    background: rgba(137, 137, 137, 0.4);
+    cursor: pointer;
+}
