--- a/src/style/home-styles.css
+++ b/src/style/home-styles.css
@@ -78,6 +78,7 @@ h2 {
     flex-direction: column;
     gap: 12px;
     padding: 0px 16px 20px 16px;
+    position: relative;
 }
 
 .CountryDisplayInfo div {
@@ -127,4 +128,22 @@ h2 {
     border-radius: 10px;
     padding: 7px 16px 7px 16px;
     text-align: center;
+}
+
+.FavoritesIconHome {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    /* top: 95px; */
+    right: 16px;
+    bottom: 168px;
+    z-index: 2;
+    width: 40px;
+    height: 40px;
+    flex-shrink: 0;
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.40);
+    background: rgba(137, 137, 137, 0.4);
+    cursor: pointer;
 }
