Protected Route is working and some styles for reviews card.

--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -44,9 +44,9 @@ nav a {
     color: #544EEE;
 }
 
-nav a:hover {
+/* nav a:hover {
     color: #34319b;
-}
+} */
 
 .BurgerIcon {
     cursor: pointer;
@@ -370,6 +370,12 @@ input::placeholder {
     margin-top: 10px
 }
 
+.NavItems p {
+    color: #15141B;
+    font-size: 1.6rem;
+    margin-bottom: -30px;
+}
+
 .NavItems a, .UserAreaLinks a {
     text-decoration: none;
     color: #544EEE;
@@ -465,4 +471,45 @@ input::placeholder {
     border-radius: 10px;
     padding: 7px 16px 7px 16px;
     text-align: center;
+}
+
+.ReviewContainer {
+    display: flex;
+    flex-direction: column;
+    padding: 20px 20px 40px 20px;
+    gap: 20px;
+    /* margin: 0 20px 0 20px; */
+}
+
+.ReviewText {
+    color: #646668;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 140%;
+}
+
+.ReviewContainer h3 {
+    font-size: 16px;
+    color: #15141B;
+}
+
+.ReviewDate {
+    font-size: 14px;
+    color: #AAACAE;
+    font-weight: 400;
+    line-height: 140%;
+}
+
+.TravelDetails {
+    display: flex;
+    flex-direction: column;
+}
+.TravelDetails p {
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 140%;
+}
+
+.TravelDetails span {
+    font-weight: 400;
 }
